WebCore/html/HTMLCanvasElement.h
@@ -27,6 +27,7 @@
 #ifndef HTMLCanvasElement_h
 #define HTMLCanvasElement_h
 
+#include "AffineTransform.h"
 #include "HTMLElement.h"
 #include "IntSize.h"
 
@@ -105,6 +106,7 @@ public:
 
     void setObserver(CanvasObserver* o) { m_observer = o; }
 
+    AffineTransform baseTransform() const;
 private:
     void createImageBuffer() const;
     void reset();
